# BirthdayAlertBot---Public

./: .env  .gitingore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
bot/: config.py  loader.py  main.py
bot/database/: base.py  models.py  repository.py  session.py
bot/handlers/: router.py
bot/handlers/keyboards/: birthday.py  commands.py
bot/handlers/routers/: birthday.py  weather.py
bot/handlers/states/: human.py
bot/utlis/: birthday.py  human.py  weather.py
txt/: mainmenu.txt  start.txt
